Fix #894 where MCQ question text wasn't going to multiple lines when too long (IE & Edge)

--- a/modules/xerte/parent_templates/Nottingham/models_html5/mcq.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/mcq.css
@@ -43,4 +43,8 @@
 		border-top: 1px solid #ccc;
 		padding-top: 1em;
 	}
+	
+	legend#question {
+		width: 100%;
+	}
 
